--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             overflow: hidden;
         }
 
-        .background-video {
+        .background-image {
             position: absolute;
             top: 0;
             left: 0;
@@ -62,9 +62,7 @@
 </head>
 <body>
 
-<video autoplay muted loop class="background-video">
-    <source src="resource/video/background.mp4" type="video/mp4">
-</video>
+<img src="resource/image/background.png" alt="Background" class="background-image">
 
 <div class="container">
     <h1>Welcome to Harmony's Gift Gallery </h1>
